# robotframework-doctestlibrary

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  PdfTest.html  PrintJobTest.html  README.md  VisualTest.html  build.py  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-image.yml  python-package.yml  python-publish.yml
DocTest/: CapabilityCheck.py  CompareImage.py  DocumentRepresentation.py  Downloader.py  HeaderFooterDetector.py  IgnoreAreaManager.py  Ocr.py  PdfDoc.py  PdfStructureComparator.py  PdfStructureModels.py  PdfTest.py  PrintJob.py  PrintJobTests.py  ReferencePromotion.py  ResultWriter.py  StructureReportBuilder.py  TextNormalization.py  VisualTest.py  WebCapture.py  WebVisualTest.py  __init__.py  _llm_flags.py  config.py  ocrs_adapter.py  text_corrector.py
DocTest/Ai/: __init__.py  prompts.py  renderers.py  responses.py
DocTest/_ocrs/: __init__.py
DocTest/ai/: __init__.py
DocTest/llm/: __init__.py  client.py  config.py  exceptions.py  prompts.py  types.py
atest/: Barcode.robot  Browser.robot  CharacterReplacement.robot  Compare.robot  DocumentProcessing.robot  LLM.robot  MovementDetection.robot  PdfContent.robot  PrintJobs.robot  ReferenceRun.robot  ResultJson.robot
atest/web/: browser_vrt.robot  examples_vrt.robot  selenium_vrt.robot  xbrowser_vrt.robot
atest/web/pages/: demo.html
docs/: AI-0.28.0.html  AI.html  Ai-0.28.0.html  Ai-0.28.1.html  Ai-0.29.0.html  Ai-0.30.0.dev1.html  Ai-0.30.0.html  Ai-0.31.0.dev1.html  Ai-0.31.0.html  Ai-0.32.0.html  Ai-0.33.0.html  Ai-0.34.0.html  Ai.html  PdfTest-0.24.0.html  PdfTest-0.24.0rc9.html  PdfTest-0.24.1.html  PdfTest-0.24.2.html  PdfTest-0.25.0.dev1.html  PdfTest-0.26.0.html  PdfTest-0.27.0.html  PdfTest-0.28.0.html  PdfTest-0.28.1.html  PdfTest-0.29.0.html  PdfTest-0.30.0.dev1.html  PdfTest-0.30.0.html  PdfTest-0.31.0.dev1.html  PdfTest-0.31.0.html  PdfTest-0.32.0.html  PdfTest-0.33.0.html  PdfTest-0.34.0.html  PdfTest.html  PdfTest.libspec  PdfTest_0.24.0rc1.html  PrintJobTest-0.24.0.html  PrintJobTest-0.24.0rc9.html  PrintJobTest-0.24.1.html  PrintJobTest-0.24.2.html  PrintJobTest-0.25.0.dev1.html  PrintJobTest-0.26.0.html  PrintJobTest-0.27.0.html  (+42 more)
doctest_dashboard/: __init__.py  cli.py  config.py  db.py  engine.py  ingest.py  masks.py  review.py  storage.py
doctest_dashboard/models/: sidecar.py
doctest_dashboard/server/: app.py  features.py  schemas.py  state.py
doctest_dashboard/server/routers/: assets.py  browse.py  engine.py  masks.py  review.py  runs.py  uploads.py
e2e/: conftest.py  e2e_helpers.py  test_journeys.py  test_version_skew.py
examples/web-visual/: README.md  web_visual_demo.robot
examples/web-visual/pages/: article.html  chart.html  dashboard.html  form.html  products.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ComparisonView.tsx  FileBrowser.tsx  MaskEditor.tsx  ZoomPane.tsx  api.ts  styles.css
openspec/changes/archive/2026-06-12-doctest-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/dashboard-ci-gate/: design.md  proposal.md
openspec/changes/dashboard-hygiene/: design.md  proposal.md
openspec/changes/dashboard-root-cause/: tasks.md
openspec/changes/keyword-docs-and-examples/: design.md  proposal.md  tasks.md
openspec/specs/api-compatibility/: spec.md
openspec/specs/comparison-correctness/: spec.md
openspec/specs/comparison-performance/: spec.md
openspec/specs/dashboard-ci-gate/: spec.md
openspec/specs/dashboard-diff-groups/: spec.md
openspec/specs/dashboard-ingest/: spec.md
openspec/specs/dashboard-lifecycle/: spec.md
openspec/specs/dashboard-review/: spec.md
openspec/specs/dashboard-root-cause/: spec.md
openspec/specs/live-recompare/: spec.md
openspec/specs/mask-editor/: spec.md
openspec/specs/result-sidecar/: spec.md
openspec/specs/toolchain-quality-gates/: spec.md
openspec/specs/unified-packaging/: spec.md
openspec/specs/uv-tooling/: spec.md
openspec/specs/web-visual-testing/: spec.md
rust/ocrs_py/: Cargo.toml
rust/ocrs_py/src/: lib.rs
scripts/: audit_resolved_versions.py  compare_wheel_contents.py  keyword_surface_baseline.json  update_keyword_surface.py  wheel_baseline.json
testdata/: invoice.pcl  invoice.ps  invoice_diff_format.pcl  invoice_difftray.pcl  invoice_letterformat.pcl  invoice_no_logo.pcl  invoice_no_logo.ps  mask_logo.json  masks.json  pattern_mask.json  pdf_area_mask.json  pdf_pattern_mask.json
utest/: conftest.py  keyword_signatures_baseline.json  test_ai_keywords.py  test_barcode.py  test_benchmarks.py  test_capability_check.py  test_compare_document_words.py  test_compareimage.py  test_config.py  test_correctness_fixes.py  test_document_streaming.py  test_documentrepresentation_integration.py  test_downloader.py  test_downloader_extended.py  test_flatten_document_words.py  test_header_footer_detection.py  test_ignore_area_manager.py  test_issue_132_134_screenshots.py  test_keyword_signatures.py  test_keyword_surface.py  test_llm_branches.py  test_llm_support.py  test_masks.py  test_movetolerance.py  test_ocr.py  test_ocrs_adapter.py  test_optional_dependencies.py  test_package_parity.py  test_pdf_structure.py  test_pdfcontent.py  test_performance_equivalence.py  test_pixel_tolerance.py  test_printjob.py  test_printjobtests.py  test_profiler.py  test_reference_run.py  test_result_json.py  test_spatial_word_sorting.py  test_structure_report.py  test_text_corrector.py  (+11 more)
utest/.github/workflows/: python-package.yml
utest/benchmarks/: test_benchmarks.py
utest/dashboard/: conftest.py  helpers.py  test_api.py  test_browse.py  test_ci_gate.py  test_cli_guard.py  test_engine.py  test_feature_contract.py  test_groups.py  test_ingest.py  test_lifecycle.py  test_masks.py  test_review.py  test_root_cause.py  test_sidecar_contract.py  test_upload.py  test_visual_polish.py
utest/testdata/: area_mask.json  pattern_mask.json  pdf_pattern_mask.json
utilities/: mask_editor.py  xom.py
(+89 files in other folders)
