[project]
name = "robotframework-doctestlibrary"
version = "0.34.0"
description = "A library for Visual Document Testing"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Many Kasiriha", email = "many.kasiriha@dbschenker.com" }]
maintainers = [{ name = "Many Kasiriha", email = "many.kasiriha@dbschenker.com" }]
requires-python = ">=3.9"
classifiers = [
    "Framework :: Robot Framework",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
# Version-conditional pins translate poetry's multi-constraint tables;
# dead <3.9 branches were dropped (requires-python is >=3.9).
dependencies = [
    "PyMuPDF>=1.26.0",
    "imutils",
    "numpy>=1.25,<2.0; python_version < '3.10'",
    "numpy>=1.26; python_version >= '3.10' and python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "opencv-python-headless",
    "parsimonious",
    "pytesseract",
    "robotframework>=4",
    "scipy; python_version < '3.12'",
    "scipy>=1.11; python_version >= '3.12'",
    "scikit-image; python_version < '3.12'",
    "scikit-image>=0.22.0; python_version == '3.12'",
    "scikit-image>=0.25.0; python_version >= '3.13'",
    "Wand",
    "pylibdmtx",
    "deepdiff; python_version < '3.12'",
    "deepdiff>=6.0; python_version >= '3.12'",
    "pyzbar",
    "setuptools; python_version >= '3.12'",
    "robotframework-assertion-engine",
]

[project.urls]
Homepage = "https://github.com/manykarim/robotframework-doctestlibrary"
Repository = "https://github.com/manykarim/robotframework-doctestlibrary"

[project.optional-dependencies]
ai = [
    "pydantic-ai-slim[openai]",
    "python-dotenv",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
all = [
    "robotframework-doctestlibrary[ai,dashboard]",
]

[project.scripts]
doctest-dashboard = "doctest_dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "invoke",
    "coverage>=7.10.7,<7.11; python_version < '3.10'",
    "coverage>=7.13.5; python_version >= '3.10'",
    "robotframework-stacktrace",
    "httpx",
    "pytest-playwright",
    "packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DocTest", "doctest_dashboard"]
exclude = ["DocTest/data/frozen_east_text_detection.pb"]
# frontend/dist is gitignored but must ship inside the wheel
artifacts = ["frontend/dist"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "doctest_dashboard/static"

[tool.hatch.build.targets.sdist]
include = ["DocTest", "doctest_dashboard", "frontend/dist", "README.md"]
exclude = ["DocTest/data/frozen_east_text_detection.pb"]
artifacts = ["frontend/dist"]
