[project]
name = "robotframework-doctestlibrary"
version = "0.34.0"
description = "A library for Visual Document Testing"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Many Kasiriha", email = "many.kasiriha@dbschenker.com" }]
maintainers = [{ name = "Many Kasiriha", email = "many.kasiriha@dbschenker.com" }]
requires-python = ">=3.10"
classifiers = [
    "Framework :: Robot Framework",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
# Version-conditional pins translate poetry's multi-constraint tables.
# Python floor is 3.10: pydantic-ai (the [ai] extra) only supports >=3.10
# in maintained versions, and 3.9 is past end of life.
dependencies = [
    "PyMuPDF>=1.26.0",
    "numpy>=1.26; python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "opencv-python-headless>=4.8",
    "parsimonious>=0.10",
    "pytesseract>=0.3.10",
    "robotframework>=4",
    "scikit-image; python_version < '3.12'",
    "scikit-image>=0.22.0; python_version == '3.12'",
    "scikit-image>=0.25.0; python_version >= '3.13'",
    "pylibdmtx>=0.1.10",
    "deepdiff; python_version < '3.12'",
    "deepdiff>=6.0; python_version >= '3.12'",
    "pyzbar>=0.1.9",
    "setuptools; python_version >= '3.12'",
    "robotframework-assertion-engine>=3.0.3",
]

[project.urls]
Homepage = "https://github.com/manykarim/robotframework-doctestlibrary"
Repository = "https://github.com/manykarim/robotframework-doctestlibrary"

[project.optional-dependencies]
ai = [
    "pydantic-ai-slim[openai]>=1",
    "python-dotenv",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
all = [
    "robotframework-doctestlibrary[ai,dashboard,barcode,printjobs]",
]
# Forward-looking extras: these packages are currently also in the base
# dependencies; a future documented release will move them here exclusively.
barcode = [
    "pylibdmtx>=0.1.10",
    "pyzbar>=0.1.9",
]
printjobs = [
    "parsimonious>=0.10",
]
# convenience extras: pull one web automation library for DocTest.WebVisualTest
# (which itself needs no extra dependencies — it drives whichever is installed)
browser = [
    "robotframework-browser",
]
selenium = [
    "robotframework-seleniumlibrary",
]

[project.scripts]
doctest-dashboard = "doctest_dashboard.cli:main"

[dependency-groups]
# real web libraries for atest/web — test-only, never a package dependency
web-test = [
    "robotframework-browser",
    "robotframework-seleniumlibrary",
]
dev = [
    "pytest",
    "invoke",
    "coverage>=7.13.5",
    "robotframework-stacktrace",
    "httpx",
    "pytest-playwright",
    "packaging",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DocTest", "doctest_dashboard"]
exclude = ["DocTest/data/frozen_east_text_detection.pb"]
# The built web UI (gitignored) lands inside the package via the vite
# outDir; release builds run `npm run build` first. A missing static dir
# is a valid state — fresh clones must `uv sync` without Node.
artifacts = ["doctest_dashboard/static"]

[tool.hatch.build.targets.sdist]
include = ["DocTest", "doctest_dashboard", "README.md"]
exclude = ["DocTest/data/frozen_east_text_detection.pb"]
artifacts = ["doctest_dashboard/static"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Lenient baseline: pyflakes, core pycodestyle errors, bugbear.
select = ["E4", "E7", "E9", "F", "B"]
ignore = [
    "E722", # bare except — legacy pattern, narrowed incrementally
    "E741", # ambiguous variable names in CV math code
    "B008", # function call in default — Robot keyword idiom
]

[tool.ruff.lint.per-file-ignores]
"DocTest/__init__.py" = ["F401"]

[tool.mypy]
files = ["DocTest"]
ignore_missing_imports = true
no_strict_optional = true
allow_redefinition = true
implicit_reexport = true
check_untyped_defs = false
# Lenient baseline for the legacy CV/numpy math code: numeric-typing noise
# is disabled; attr-defined/name-defined/return-value stay on (they catch
# real bugs — three were found on first run).
disable_error_code = [
    "operator",
    "arg-type",
    "var-annotated",
    "assignment",
    "misc",
    "list-item",
]

[tool.coverage.run]
# Parallel data files: pytest-cov (utest, xdist workers) and the
# coverage-wrapped Robot runs (atest) all emit suffixed files that
# `coverage combine` merges before reporting.
parallel = true
source = ["DocTest", "doctest_dashboard"]

[tool.coverage.report]
# Floor is set below the measured combined utest+atest coverage
# (45-49% across CI jobs as of 2026-07); raise it as coverage grows,
# never lower it.
fail_under = 40
