[package]
name = "ocrs_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ocrs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
home = "0.5"
image = "0.24"
once_cell = "1"
ureq = { version = "2", features = ["tls", "json"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
numpy = "0.21"
ocrs = { git = "https://github.com/robertknight/ocrs", rev = "903bc7c5e8402332d84f53bb4ed5f8450298fce0" }
rten = { version = "0.22" }
rten-imageproc = { version = "0.22" }
rten-tensor = { version = "0.22" }
